Tue Jan 29 15:17:43 2002  Tim Janik  <timj@gtk.org>

	* bsesnooper: set consumership.

	* removed bseconstant.[hc] as this is in BSE now.

Thu Jan 24 11:03:49 2002  Tim Janik  <timj@gtk.org>

	* bsesnooper.c (bse_snooper_context_create): get rid of hard coded
	number of istreams.

Thu Jan 24 01:38:49 2002  Tim Janik  <timj@gtk.org>

	* *.c: fix categories so /Modules/ is used instead of /Source/.

	* bsewaveosc.c: make n_octaves stepping more fine grained.
	fix description.

Tue Jan 15 17:38:57 2002  Tim Janik  <timj@gtk.org>

	* bsesnooper.[hc]: deal with multiple incarnations by letting
	the user specify a context id which identifies the context to
	snoop on.

Tue Jan 15 17:37:14 2002  Tim Janik  <timj@gtk.org>

	* bsewaveosc*.[hc]: stripped GslModule calculation code,
	use functions from gslwaveosc.h unstead. adapted input/output
	channels, supports modulation (linear and exponential) now.
	got rid of bsewaveosc-aux.c.

Sat Jan 12 13:36:12 2002  Tim Janik  <timj@gtk.org>

	* bsewaveosc.[hc]: fixed GslModule channel allocations.
	use if_reject/if_expect where apropriate.
	use tschebyscheff type II again.

Thu Dec 20 07:01:32 2001  Tim Janik  <timj@gtk.org>

	* bsewaveosc.c (wmod_process): removed commented reference
	implementation, clear filter state beyond GSL_SIGNAL_EPSILON.

Sat Oct 20 12:51:57 2001  Tim Janik  <timj@gtk.org>

	* icons/filter.xcf: new excellent image by drc.

	* icons/filter.xcf: moved this to cyria-filter.xcf.

Thu Sep 27 14:42:11 2001  Tim Janik  <timj@gtk.org>

	* Makefile.am (%.enums): fix enum autogeneration for parallel builds.
	we can#t use the same tmpfile name here.

Thu Sep 27 13:08:53 2001  Tim Janik  <timj@gtk.org>

	* lots of adaptions to BSE changes, fixes and new plugins.

	* a few dav*.[hc] plugins still remain unported, help apprechiated.

	* davxtalstrings.[hc]: ported this to new BSE APIs, GSL engine and
	floats processing.
	* bsenoise.[hc] bsegenosc.[hc] bsemixer.[hc] bsemult.[hc] bseadder.[hc]:
	likewise.
